--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mantine/next": "^6.0.2",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "firebase": "^9.18.0",
     "next": "13.2.4",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "^9.1.1",
