--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react-dom": "18.2.0",
     "swiper": "^9.1.1",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.9.0"
   }
 }
