--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/next": "^6.0.2",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
+    "@tabler/icons-react": "^2.13.1",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
