--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "firebase": "^9.19.1",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
