--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^6.0.6",
     "@mantine/core": "^6.0.2",
     "@mantine/hooks": "^6.0.2",
     "@mantine/next": "^6.0.2",
@@ -19,11 +20,12 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "embla-carousel-react": "^7.1.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "^9.1.1",
+    "swiper": "^9.2.0",
     "typescript": "5.0.2"
   },
   "devDependencies": {
